objects/Training_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Training_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Customer Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Course</label>
        <referenceTo>Training_Course__c</referenceTo>
        <relationshipName>Training_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Registration</label>
    <nameField>
        <displayFormat>TN#-{0000}</displayFormat>
        <label>Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>